@@ -1,3 +1,9 @@
+2019-08-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* inst/tinytest/test_simple.R: Add new 'isStupid' test
+
 2019-08-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.3.6
